styles/ableplayer.css
/*
  Able Player core styles

  Default z-index map:

  * Modal dialog
  div.able-modal-dialog = 10000
  div.able-modal-overlay = 9500

  * Items that should always be on top (9000):
  #able-vts = 9400
  .able-alert = 9400
  .able-window-toolbar .able-button-handler-preferences = 9300
  .able-popup = 9200
  .able-volume-head = 9175
  .able-volume-slider = 9150
  .able-tooltip = 9000

  * Pop-ups with critical content:  (7000 - 8000):
  .able-sign-window = 8000
  .able-transcript-area = 7000

  * Player controls: (5000 - 6000)
  .able-controller .able-seekbar = 6900
  .able-controller .buttonOff = 6800
  .able-controller div[role="button"] > img = 6700
  .able-controller div[role="button"] > span = 6700
  .able-controller div[role="button"] = 6600
  .able-big-play-button = 6500
  div.able-captions-wrapper = 6000
  .able-seekbar-head = 5500
  .able-seekbar-played = 5200
  .able-seekbar-loaded = 5100
  .able = 5000
*/
.able-wrapper {
  position: relative;
  margin: 1em 0;
  padding: 0;
  max-width: 100%;
  height: auto;
  box-sizing: content-box !important;
  text-align: left;
}
.able {
  position: relative;
  margin: 0;
  padding: 0;
  width: 100%; /* will be changed dynamically as player is contructed */
  background-color: #000;
  box-shadow: 0px 0px 16px #262626;
  z-index: 5000;
}
.able-column-left {
    float: left;
}
.able-column-right {
    float: left;
}
.able .able-vidcap-container {
  background-color: #000;
  /* height: 360px; */
  left: 0;
  margin: 0;
  position: relative;
  top: 0;
}
.able .able-audcap-container {
  background-color: #000;
  position: relative;
  margin: 0;
  padding: 1.5em 0.25em;
}
.able-player {
  font-family: Arial, Helvetica, sans-serif;
  background-color: #262626; /* background color of player (appears on top & bottom) */
}
.able-audio {
  padding-top: 1em;
}
.able-offscreen {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}
.able-media-container audio {
  display: none !important;
}
.able-controller {
  position: relative;
  border-bottom: 1px solid #4c4c4c;
  background-color: #464646; /* background color of controller bar */
  min-height: 38px; /* height of button (20px) + 4px border + 4px padding */
  padding: 0;
}
.able-poster {
  position: absolute;
  top: 0;
  left: 0;
  width: 100% !important;
  height: auto !important;
}
.able .able-vidcap-container {
  overflow: visible;
}
.able .able-vidcap-container video {
  max-width: 100%;
}

/*
  YouTube and Vimeo
*/
.able-media-container iframe {
  max-width: 100%;
}

/*
  Controller Buttons & Controls
*/
.able-big-play-button {
    position: absolute;
    font-size: 8em;
    color: #fdfdfd;
    background-color: transparent;
    border: none;
    outline: none;
    left: 0;
    top: 0;
    padding: 0;
    z-index: 6500;
    /*
      Opacity value chosen to achieve a
      contrast ratio of 5.63 in the worst case.
    */
    opacity: 0.75;
}

.able-big-play-button:hover, .able-big-play-button:focus {
  opacity: 100;
}

.able-big-play-button .icon-play,
.able-big-play-button svg {
  background-color: #000;
  padding: 1rem 2rem;
}
.able-big-play-button:hover .icon-play,
.able-big-play-button:hover svg {
  outline-style: solid;
  outline-width: medium;
  outline-color: #8ab839 !important; /* green */
}
.able-big-play-button:focus .icon-play,
.able-big-play-button:focus svg {
  outline-style: solid;
  outline-width: medium;
  outline-color: #ffbb37 !important; /* yellow */
}
.able-left-controls, .able-right-controls {
    overflow: visible;
}
.able-left-controls div[role="button"], .able-right-controls div[role="button"] {
    vertical-align: middle;
}
.able-left-controls {
  float: left;
}
.able-right-controls {
  float: right;
}
.able-black-controls,
.able-black-controls div[role="button"],
.able-black-controls label  {
  color: #000 !important;
}
.able-black-controls .able-seekbar {
  border: 1px solid #000;
}
.able-white-controls,
.able-white-controls div[role="button"],
.able-black-controls label {
  color: #fff !important;
}
.able-white-controls .able-seekbar {
  border: 1px solid #fff;
}
.able-controller div[role="button"] {
  background: none;
  position: relative;
  display: inline-block;
  border-style: none;
  margin: 3px;
  padding: 0;
  font-size: 20px;
  min-width: 24px;
/*  outline: 2px solid #464646; */ /* same color as .able-controller background-color */
  border: none;
  overflow: visible !important;
  z-index: 6600;
}
.able-controller div[role="button"] > span,
.able-controller div[role="button"] > img {
  width: 20px;
  margin: 0 auto;
  padding: 0;
  z-index: 6700;
}
.able-controller .buttonOff {
  opacity: 0.5;
  z-index: 6800;
}
.able-controller .able-seekbar {
  margin: 0 5px;
  z-index: 6900;
}
.able-controller div[role="button"]:hover,
.able-controller div[role="button"]:focus {
  outline-style: solid;
  outline-width: medium;
}
.able-controller div[role="button"]:hover {
  outline-color: #8ab839 !important; /* green */
}
.able-controller div[role="button"]:focus {
  outline-color: #ffbb37 !important; /* yellow */
}
.able-controller button::-moz-focus-inner,
.able-search-results button::-moz-focus-inner {
  border: 0;
}


/*
  Seekbar
*/
.able-seekbar-wrapper {
  display: inline-block;
  vertical-align: middle;
}
.able-seekbar {
  position: relative;
  height: 0.5em;
  border: 1px solid;
  background-color: #000;
  margin: 0 3px;
  border-style: solid;
  border-width: 2px;
  border-color: #fff;
}
.able-seekbar-loaded {
  display: inline-block;
  position: absolute;
  left: 0;
  top: 0;
  height: 0.5em;
  background-color: #464646;
  z-index: 5100;
}
.able-seekbar-played {
  display: inline-block;
  position: absolute;
  left: 0;
  top: 0;
  height: 0.5em;
  background-color: #dadada;
  z-index: 5200;
}
.able-seekbar-head {
  display: inline-block;
  position: relative;
  left: 0;
  top: -0.4em;
  background-color: #fdfdfd;
  width: 0.8em;
  height: 0.8em;
  border: 1px solid;
  border-radius: 0.8em;
  z-index: 5500;
}
/* ... */

